--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Servidor para la pagina del consultorio dental de la Universidad de Cuenca",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon index.js"
+    "test": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
